--- a/notebooks/Automation.ipynb
+++ b/notebooks/Automation.ipynb
@@ -40,6 +40,28 @@
    "source": [
     "## Publish"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Git Hooks\n",
+    "Expecting something like this:\n",
+    "```bash\n",
+    "#!/bin/bash\n",
+    "set -e\n",
+    "flake8 hy_kernel/*.py setup.py && python setup.py nosetests               \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
