--- a/notebooks/Automation.ipynb
+++ b/notebooks/Automation.ipynb
@@ -55,32 +55,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PyPi: release dry run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cd .. && python setup.py register -r pypitest\n",
+    "!cd .. && python setup.py sdist\n",
+    "!cd .. && python setup.py sdist upload -r pypitest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PyPi: release"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!cd .. && python setup.py register -r pypi\n",
+    "!cd .. && python setup.py sdist\n",
+    "!cd .. && python setup.py sdist upload -r pypi"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
