--- a/notebooks/Automation.ipynb
+++ b/notebooks/Automation.ipynb
@@ -12,14 +12,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Roadmap\n",
-    "- Use a Hy notebook!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Run Tests"
    ]
   },
@@ -97,21 +89,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Hy",
+   "language": "hy",
+   "name": "hy"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+    "name": "hy"
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "mimetype": "text/x-hylang",
+   "name": "hy",
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
